--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="PC parts tracking and configuration system" />
-    <title>PCconfig - Track and Build Your PC</title>
+    <title>PCconfig</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
